5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1594_2425.log
== TEST (2019-03-29 12:46:28) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=d/cg
print(round(cm, 3 + "km\l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(cm, 3 + "km\l"))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:46:59) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=d/cg
print(float(round(cm, 3 + "km\l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(round(cm, 3 + "km\l")))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:47:20) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=d/cg
print(float(round(cm, 3 + "km\l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(round(cm, 3 + "km\l")))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:48:07) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=d/cg
print(float(round(cm, 3 ))) + "km/l"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(round(cm, 3 ))) + "km/l"
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:48:46) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(float(round(d/cg, 3 ))) + "km/l"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(float(round(d/cg, 3 ))) + "km/l"
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:49:16) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3 )))+"km/l"
-- ERROR:
File "XXXX", line 4
    print(round(d/cg, 3 )))+"km/l"
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:49:48) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3 ))+"km/l"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(d/cg, 3 ))+"km/l"
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:50:59) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3 ))
print(cm + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(cm + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:51:32) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3 ))
print(float(cm + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(cm + "km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:52:16) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3))
print(float(cm + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(cm + "km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:52:38) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3))
print(float(cm + 'km/l'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(cm + 'km/l'))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:52:53) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3))
print(cm + 'km/l')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(cm + 'km/l')
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:53:20) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3))
print(cm) + km/l
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(cm) + km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:53:56) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3))
print(cm) + "km/l"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(cm) + "km/l"
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:54:29) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3))
print((cm) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print((cm) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:55:42) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3))
print(float(cm) +(str("km/l")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(float(cm) +(str("km/l")))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 12:56:21) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
cm=(round(d/cg, 3))
print(str(cm + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(str(cm + "km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:25:53) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:26:58) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(d/cg, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:27:40) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) + "km/l"
-- ERROR:
File "XXXX", line 5
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:27:56) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(d/cg, 3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:28:27) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(str(round(d/cg, 3) + "km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str(round(d/cg, 3) + "km/l"))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:28:35) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(str(round(d/cg, 3) ,"km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str(round(d/cg, 3) ,"km/l"))
TypeError: decoding to str: need a bytes-like object, float found
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:29:09) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) ,"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:29:18) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) ,"km/l")
-- EXECUTION TIME:
0.174419
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:29:56) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) ,"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:30:12) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) ,"km/l")
-- EXECUTION TIME:
0.145795
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:31:04) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) ,"km/l")
-- EXECUTION TIME:
0.126572
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:31:06) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) ,"km/l")
-- EXECUTION TIME:
0.215508
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:31:06) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) ,"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:31:15) 
-- CODE:
#d=distancia percorrida, cg= combustivel gasto, cm= consumo medio
d=float(input("Distancia percorrida: "))
cg=float(input("Consumo medio: "))
print(round(d/cg, 3) ,"km/l")
-- EXECUTION TIME:
0.179203
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
